--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FoodListActivity">
+    tools:context=".OrderStatusActivity"
+    android:background="@drawable/background1">
+
+
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_food"
+        android:id="@+id/listOrders"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical">
+        android:background="@android:color/transparent">
+
+
 
     </android.support.v7.widget.RecyclerView>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
